# amcrust

./: .gitignore  Cargo.toml  README.md  flake.nix
docs/: hds-wire-format.md
hap/: Cargo.toml
hap/src/: error.rs  pairing.rs  pointer.rs  tlv.rs
hap/src/accessory/: mod.rs
hap/src/accessory/defined/: faucet.rs  heater_cooler.rs  irrigation_system.rs  lightbulb.rs  lock.rs  shower_head.rs  television.rs
hap/src/characteristic/: mod.rs
hap/src/server/: ip.rs  mod.rs
hap/src/storage/: accessory_database.rs  file_storage.rs
hap/src/transport/: mdns.rs  tcp.rs
hap/src/transport/http/: mod.rs  server.rs
hap/src/transport/http/handler/: accessories.rs  characteristics.rs  identify.rs  mod.rs  pair_setup.rs  pair_verify.rs  pairings.rs
nix/devShells/: default.nix
nix/nixosModules/: amcrust.nix
src/: accessory.rs  amcrest.rs  main.rs  metrics.rs  motion.rs  srtp.rs  stream.rs  tlv8.rs
src/hsv/: codec.rs  fmp4.rs  frame.rs  hds.rs  mod.rs  recording.rs
